test/bad/type_missmatch_19.mpp
fun bar():real { return 1; };
